[package]
name = "cognichain"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8.4"
secp256k1 = "0.21.3"
sha2 = "0.9"
bincode = "1.3.3"
sled = "0.34.6"
structopt = "0.3"
chrono = "0.4.26"
hex = "0.4"
druid = "0.7.0"
druid-widget-nursery = "0.1.0"
reqwest = { version = "0.11", features = ["json"] }
warp = "0.3"
log = "0.4"
env_logger = "0.10.0"
anyhow = "1.0"
im = "15.0.0"

[[bin]]
name = "keygen"
path = "tools/keygen.rs"
